# task-queue-service

./: .env.example  .flake8  Dockerfile  alembic.ini  docker-compose.yml  notes.txt  pyproject.toml
docker/: lint.sh  start.sh  test.sh  worker.sh
migrations/: env.py
migrations/versions/: ced5b6491f24_init_tables.py
src/task_queue_service/: app.py  asgi.py  container.py  handlers.py  settings.py  task.py  utils.py  worker_run.py
src/task_queue_service/db/: tables.py
src/task_queue_service/repositories/: __init__.py  fake.py  interface.py  task_repository.py
src/task_queue_service/services/task_queue/: __init__.py  interface.py  task_queue.py
src/task_queue_service/services/task_timer/: __init__.py  fake.py  interface.py  random.py
src/task_queue_service/uow/: __init__.py  fake.py  interface.py  uow.py
src/task_queue_service/use_cases/: __init__.py  add_task_use_case.py  get_task_info_use_case.py  interface.py  poll_tasks_use_case.py
src/task_queue_service/worker/: __init__.py  interface.py  worker.py
tests/unit/repositories/: test_fake_task_repository.py
tests/unit/services/: test_fake_task_timer.py  test_random_task_timer.py  test_task_queue.py
tests/unit/use_cases/: test_add_task_use_case.py  test_get_task_info_use_case.py  test_poll_tasks_use_case.py
