[tool.poetry]
name = "task-queue-service"
version = "0.1.0"
description = ""
authors = []
packages = [
    {include = "task_queue_service", from = "src"},
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.0"
dependency-injector = "^4.41.0"
pydantic = {extras = ["dotenv"], version = "^2.0.3"}
pydantic-settings = "^2.0.2"
uvicorn = "^0.23.1"
sqlalchemy = "^2.0.19"
alembic = "^1.11.1"
asyncpg = "^0.28.0"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.7.0"
pytest = "^7.4.0"
mypy = "^1.4.1"
flake8 = "^6.0.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.1"

[tool.isort]
profile = "black"
combine_as_imports = true

[tool.black]
line-length = 90
target-version = ['py311']

[tool.mypy]
plugins = [
    "pydantic.mypy"
]
strict = true

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = [
    "--cov",
    "-vv",
]
testpaths = ['tests']
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
